// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button test 1`] = `
<button
  type="button"
>
  Button
</button>
`;

exports[`page test 1`] = `
<div>
  <button
    type="button"
  >
    Button
  </button>
  <button
    type="button"
  >
    Button
  </button>
</div>
`;
